started create event page

--- a/SeniorProject_v01/app/templates/app/error.html
+++ b/SeniorProject_v01/app/templates/app/error.html
@@ -5,6 +5,8 @@
 <div class="jumbotron">
     <h1>Error</h1>
     <p>Sorry about that<br />We can't make that work :(</p>
+
+    <p>{{ error_code }}</p>
 </div>
 
 {% endblock %}
