--- a/SeniorProject_v01/app/templates/app/login.html
+++ b/SeniorProject_v01/app/templates/app/login.html
@@ -3,12 +3,17 @@
 
 {% block content %}
 
+{% if request.user.is_authenticated %}
+<div class="col">
+    <h1>Welcome back, {{ request.user.username.capitalize }}!</h1>
+    <h4>You are already logged in.</h4>
+</div>
+
+{% else %}
 <div class="login-form">
     <form action="." method="post" class="form-horizontal">
         {% csrf_token %}
         <h2 class="text-center">Sign in</h2>
-
-
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
@@ -48,5 +53,8 @@
         </div>
     </form>
 </div>
+
+{% endif %}
+
 
 {% endblock %}
