--- a/SeniorProject_v01/app/templates/app/create.html
+++ b/SeniorProject_v01/app/templates/app/create.html
@@ -4,14 +4,12 @@
 
 {% block content %}
 <h1>Create a New Event</h1>
+{% csrf_token %}
+{{ form }}
 
+<!-- 
 <form method="post">
-    {% csrf_token %}
     {{ form.non_field_errors }}
-
-    {{ form.as_p }}
-
-    <!-- 
     <div class="row">
         <div class="col-md-6">
             {{ form.name.errors }}
