--- a/SeniorProject_v01/app/templates/tempocal/day.html
+++ b/SeniorProject_v01/app/templates/tempocal/day.html
@@ -9,9 +9,9 @@
                 <div class="day-content">
                     {% if events_str %}
                         <div class="event-inner">
-                        <span class="eventTitle">
+                        <div class="eventTitle">
                             {{ events_str }}
-                            </span>
+                            </div>
                         </div>
                     {% else %}
                     {% endif %}
