--- a/SeniorProject_v01/app/templates/tempocal/month.html
+++ b/SeniorProject_v01/app/templates/tempocal/month.html
@@ -10,14 +10,14 @@
             </td>
             <td class="header-right">
                 <a href="/">
-                    <span class="button button-prev default corner-left" unselectable="on">
-                        <span class="left-arrow"><</span>
-                    </span>
+                    <div class="button button-prev default corner-left" unselectable="on">
+                        <div class="left-arrow"><</div>
+                    </div>
                 </a>
                 <a href="/">
-                    <span class="button button-next default corner-right" unselectable="on">
-                        <span class="right-arrow">></span>
-                    </span>
+                    <div class="button button-next default corner-right" unselectable="on">
+                        <div class="right-arrow">></div>
+                    </div>
                 </a>
             </td>
         </tr>
