--- a/SeniorProject_v01/app/templates/app/search.html
+++ b/SeniorProject_v01/app/templates/app/search.html
@@ -6,7 +6,10 @@
 
 {% if request.user.is_authenticated %}
 <div class="row">
-    <h1>Search</h1>
+    <div class="col">
+        <h1 class="text-center">Search</h1>
+    </div>
+    
 </div>
 
 <div class="row">
