--- a/SeniorProject_v01/app/templates/app/layout.html
+++ b/SeniorProject_v01/app/templates/app/layout.html
@@ -79,11 +79,12 @@
         </footer>
     </div>
 
-    <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
+    <script src="{% static 'app/scripts/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'app/scripts/bootstrap.min.4.js' %}"></script>
+    <script src="{% static 'app/scripts/jquery-ui.1.12.1.min.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
+    <script src="{% static 'app/scripts/site.js' %}"></script>
 
-    {% load staticfiles %}
     {% block scripts %}
 
     {% endblock %}
