--- a/SeniorProject_v01/app/templates/tempocal/day.html
+++ b/SeniorProject_v01/app/templates/tempocal/day.html
@@ -8,11 +8,8 @@
                 
                 <div class="day-content">
                     {% if events_str %}
-                        <div class="event-inner">
-                        <div class="eventTitle">
+                        <!-- <div class="event-inner"> -->
                             {{ events_str }}
-                            </div>
-                        </div>
                     {% else %}
                     {% endif %}
                 </div> 
