--- a/SeniorProject_v01/app/templates/app/upcoming.html
+++ b/SeniorProject_v01/app/templates/app/upcoming.html
@@ -14,73 +14,79 @@
     <form method="GET" id="program-listing">
         {% csrf_token %}
 
-        {% for field in filters.visible_fields %}
-            <div class="form-group">
-                <label for="{{ field.id_for_label }}">{{ field }}</label>
-
-                {% for error in field.errors %}
-                    <span class="help-block">{{ error }}</span>
-                {% endfor %}
+        <div class="row">
+            <div class="col-md-4 align-center">
+                {{ filters.event_type.errors }}
+                <label for="{{ filters.name.id_for_label }}">Event Type</label>
+                {{ filters.event_type }}
             </div>
-        {% endfor %}
 
-        <button class="btn btn-primary" type="submit">
-            <i class="fas fa-search navbar-fas"></i>Search
-        </button>
+            <div class="col-md-4 align-center">
+                {{ filters.district.errors }}
+                <label for="{{ filters.district.id_for_label }}">District</label>
+                {{ filters.district }}
+            </div>
+
+            <div class="col-md-4 align-center">
+                <button class="btn btn-primary" type="submit">
+                    <i class="fas fa-search navbar-fas"></i>Search
+                </button>
+                <a href="upcoming" class="btn btn-primary"><i class="fas fa-times-circle navbar-fas"></i>Reset</a>
+            </div>
+        </div>
     </form>
-    <a href="upcoming" class="btn btn-primary"><i class="fas fa-times-circle navbar-fas"></i>Reset</a>
 
 
-        {% if upcoming %}
-        <table class="table table-striped table-hover">
-            <thead class="thead-dark">
-                <th><h3>Title</h3></th>
-                <th><h3>Category</h3></th>
-                <th><h3>Description</h3></th>
-                <th><h3>Date</h3></th>
-                <th><h3>Time</h3></th>
-                <th><h3>Location</h3></th>
-            </thead>
+    {% if upcoming %}
+    <table class="table table-striped table-hover">
+        <thead class="thead-dark">
+            <th><h3>Title</h3></th>
+            <th><h3>Category</h3></th>
+            <th><h3>Description</h3></th>
+            <th><h3>Date</h3></th>
+            <th><h3>Time</h3></th>
+            <th><h3>Location</h3></th>
+        </thead>
 
-        {% for event in upcoming %}
-            <tr>
-                <td class="align-middle align-center"><a href="/event/{{event.id}}">{{ event.name }}</a></td>
+    {% for event in upcoming %}
+        <tr>
+            <td class="align-middle align-center"><a href="/event/{{event.id}}">{{ event.name }}</a></td>
 
-                <td class="align-middle align-center">
-                    {% if event.event_type.id == 6 %}
-                        <img src="{% static 'app/img/icons/national.svg' %}" class="event-type-icon" />
-                    {% elif event.event_type.id == 5 %}
-                        <img src="{% static 'app/img/icons/regional.svg' %}" class="event-type-icon" />
-                    {% elif event.event_type.id == 4 %}
-                        <img src="{% static 'app/img/icons/community.svg' %}" class="event-type-icon" />
-                    {% elif event.event_type.id == 3 %}
-                        <img src="{% static 'app/img/icons/training.svg' %}" class="event-type-icon" />
-                    {% elif event.event_type.id == 2 %}
-                        <img src="{% static 'app/img/icons/backpack.svg' %}" class="event-type-icon" />
-                    {% elif event.event_type.id == 1 %}
-                        <img src="{% static 'app/img/icons/camping.svg' %}" class="event-type-icon" />
-                    {% else %}
-                        <i class="far fa-question-circle"></i>
-                    {% endif %}
-
-                    <br />{{ event.event_type }}
-                </td>
-
-                <td class="align-middle">{{ event.description|truncatesmart:160 }} <a href="/event/{{event.id}}">(more)</a></td>
-                
-                {% if event.date_start.day == event.date_end.day %}
-				    <td class="align-middle align-center"><i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ event.date_start }}</td>
-				{% else %}
-				    <td class="align-middle align-center"><i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ event.date_start }} - {{ event.date_end }}</td>
+            <td class="align-middle align-center">
+                {% if event.event_type.id == 6 %}
+                    <img src="{% static 'app/img/icons/national.svg' %}" class="event-type-icon" />
+                {% elif event.event_type.id == 5 %}
+                    <img src="{% static 'app/img/icons/regional.svg' %}" class="event-type-icon" />
+                {% elif event.event_type.id == 4 %}
+                    <img src="{% static 'app/img/icons/community.svg' %}" class="event-type-icon" />
+                {% elif event.event_type.id == 3 %}
+                    <img src="{% static 'app/img/icons/training.svg' %}" class="event-type-icon" />
+                {% elif event.event_type.id == 2 %}
+                    <img src="{% static 'app/img/icons/backpack.svg' %}" class="event-type-icon" />
+                {% elif event.event_type.id == 1 %}
+                    <img src="{% static 'app/img/icons/camping.svg' %}" class="event-type-icon" />
+                {% else %}
+                    <i class="far fa-question-circle"></i>
                 {% endif %}
+
+                <br />{{ event.event_type }}
+            </td>
+
+            <td class="align-middle">{{ event.description|truncatesmart:160 }} <a href="/event/{{event.id}}">(more)</a></td>
                 
-                <td>{{ event.start_time }}</td>
+            {% if event.date_start.day == event.date_end.day %}
+				<td class="align-middle align-center"><i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ event.date_start }}</td>
+			{% else %}
+				<td class="align-middle align-center"><i class="fas fa-calendar-alt" aria-hidden="true"></i> {{ event.date_start }} - {{ event.date_end }}</td>
+            {% endif %}
+                
+            <td>{{ event.start_time }}</td>
 
-                <td class="align-middle align-center">{{ event.district }}</td>
+            <td class="align-middle align-center">{{ event.district }}</td>
 
-            </tr>
-        {% endfor %}
-        </table>
+        </tr>
+    {% endfor %}
+    </table>
 
     {% else %}
         <p>No events are available.</p>
