search bug (zero year crash) resolved

--- a/SeniorProject_v01/app/templates/app/search.html
+++ b/SeniorProject_v01/app/templates/app/search.html
@@ -30,7 +30,7 @@
                     {{ field|add_class:'form-control' }}
 
                     {% for error in field.errors %}
-                        <span class="help-block">{{ error }}</span>
+                        <span class="field-validation-error">{{ error }}</span>
                     {% endfor %}
                 </div>
             {% endfor %}
