database updates, added contact type to eventdetail

--- a/SeniorProject_v01/app/templates/app/error.html
+++ b/SeniorProject_v01/app/templates/app/error.html
@@ -1,6 +1,6 @@
-﻿{% extends "app/layout.html" %}
+﻿{% extends "app/wrapper.html" %}
 
-{% block content %}
+{% block wrapper %}
 
 <div class="jumbotron">
     <h1 class="display-2 text-danger"><i class="fas fa-exclamation-triangle fa-sm text-danger"></i> {{ error_code }}</h1>
