--- a/SeniorProject_v01/app/templates/app/eventdetail.html
+++ b/SeniorProject_v01/app/templates/app/eventdetail.html
@@ -51,37 +51,39 @@
 
             <table class="table">
                 <tr>
-                    <td>
-                        <strong>Description: </strong>
-                    </td>
+                    <th scope="row">Description: </th>
                     <td>
                         {{ event.description }}
                     </td>
                 </tr>
                 <tr>
+                    <th scope="row">Primary Contact: 
                     <td>
-                        <strong>Primary Contact: </strong>
-                    </td>
-                    <td>
-                        {{ event.primary_contact_ID}}
+                        {{ event.primary_contact_name}}
                     </td>
                 </tr>
                 <tr>
+                    <th scope="row">Contact Information: 
                     <td>
-                        <strong>Payment: </strong>
+                        {% if event.primary_contact_info_type == 1 %}
+                            <i class="fas fa-envelope"></i> 
+                        {% elif event.primary_contact_info_type == 0 %}
+                            <i class="fas fa-phone"></i> 
+                        {% endif %}
+                        {{ event.primary_contact_info }}
                     </td>
+                </tr>
+                <tr>
+                    <th scope="row">>Payment: </th>
                     <td>
                         <a href="{{ event.payment_link}}">{{ event.payment_link }}</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>
-                        <strong>Address: </strong>
-                        
-                    </td>
+                    <th scope="row">Address: </th>
                     <td>
                         {{ event.address }}
-                        <br /><i class="far fa-compass"></i> <a href="{{ url_directions }}" target="_blank"><strong>Get Directions</strong></a>
+                        <br /><i class="far fa-compass"></i> <a href="{{ url }}" target="_blank"><strong>Get Directions</strong></a>
                     </td>
 
             </table>
