time selector working; time added to eventdetail but needs formatting

--- a/SeniorProject_v01/app/static/app/content/site.css
+++ b/SeniorProject_v01/app/static/app/content/site.css
@@ -25,6 +25,10 @@ footer {
     text-align: center;
 }
 
+.form-control:disabled, .form-control[readonly] {
+    background-color: white;
+}
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
