--- a/SeniorProject_v01/app/templates/app/create.html
+++ b/SeniorProject_v01/app/templates/app/create.html
@@ -6,6 +6,7 @@
 
 {% block head %}
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+{{ form.media }}
 {% endblock %}
 
 
