--- a/SeniorProject_v01/app/templates/app/layout.html
+++ b/SeniorProject_v01/app/templates/app/layout.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.4.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/headerlogin.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
@@ -80,7 +81,8 @@
         </footer>
     </div>
 
-    <script src="{% static 'app/scripts/jquery-3.3.1.min.js' %}"></script>
+    <!-- <script src="{% static 'app/scripts/jquery-3.3.1.min.js' %}"></script>-->
+    
     <script src="{% static 'app/scripts/bootstrap.bundle.4.min.js' %}"></script>
     <script src="{% static 'app/scripts/jquery-ui.1.12.1.min.js' %}"></script>
     <script src="{% static 'app/scripts/respond.js' %}"></script>
