Updated Registration page, Login, and password reset.

--- a/SeniorProject_v01/app/static/app/content/site.css
+++ b/SeniorProject_v01/app/static/app/content/site.css
@@ -23,6 +23,7 @@ h1, h2, h3, h4, h5, h6 {
 
 footer {
     text-align: center;
+    color: #FFF; 
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -421,4 +422,40 @@ th.month {
 
 .bk-month {
     font-size: 1.5rem;
+}
+
+
+/*******REGISTRATION PAGE CSS***********/
+.divider-text {
+    position: relative;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+    .divider-text span {
+        padding: 7px;
+        font-size: 12px;
+        position: relative;
+        z-index: 2;
+    }
+
+    .divider-text:after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        border-bottom: 1px solid #ddd;
+        top: 55%;
+        left: 0;
+        z-index: 1;
+    }
+
+.btn-facebook {
+    background-color: #405D9D;
+    color: #fff;
+}
+
+.btn-twitter {
+    background-color: #42AEEC;
+    color: #fff;
 }
