--- a/SeniorProject_v01/app/templates/app/layout.html
+++ b/SeniorProject_v01/app/templates/app/layout.html
@@ -60,7 +60,7 @@
                         </div>
                     </li>
 			    {% else %}
-			        <li class="nav-link"><a href="{% url 'register' %}"><i class="fas fa-user-plus navbar-fas"></i>Sign Up</a></liclass="nav-link">
+			        <li class="nav-link"><a href="{% url 'signup' %}"><i class="fas fa-user-plus navbar-fas"></i>Sign Up</a></li class="nav-link">
 			        <li class="nav-link"><a href="{% url 'login' %}"><i class="fas fa-sign-in-alt navbar-fas"></i>Login</a></li>
                 {% endif %}
                 </ul>
