--- a/SeniorProject_v01/app/templates/app/login.html
+++ b/SeniorProject_v01/app/templates/app/login.html
@@ -43,14 +43,14 @@
         </div>
 
         <div class="clearfix centered">
-            <a href="#" class="pull-right">Forgot Password?</a>
+            <a href="{% url 'password_reset' %}" class="pull-right">Forgot Password?</a>
         </div>
 
-		<div class="or-seperator"><i>or</i></div>
+		<!--<div class="or-seperator"><i>or</i></div>
         <p class="text-center">Login with your social media account</p>
         <div class="text-center social-btn">
             <a href="#" class="btn btn-primary"><i class="fab fa-facebook-square"></i>&nbsp; Facebook</a>
-        </div>
+        </div>--->
     </form>
 </div>
 
